[BugFix] Fix driver URL loading error in JDBCScanner.java
Signed-off-by: immutablecodes <immutablecodes@126.com>